==> zephyrproject-rtos/zephyr/soc/st/stm32/stm32f7x/power.c <==
/*
 * Copyright (c) 2025 Ac6
 *
 * SPDX-License-Identifier: Apache-2.0
 */

#include <clock_control/clock_stm32_ll_common.h>
#include <soc.h>

#include <stm32f7xx_ll_bus.h>
#include <stm32f7xx_ll_cortex.h>
#include <stm32f7xx_ll_pwr.h>
#include <stm32f7xx.h>

#include <zephyr/drivers/clock_control/stm32_clock_control.h>
#include <zephyr/drivers/counter.h>
#include <zephyr/drivers/interrupt_controller/gic.h>
#include <zephyr/kernel.h>
#include <zephyr/logging/log.h>
#include <zephyr/pm/pm.h>
#include <zephyr/init.h>

LOG_MODULE_DECLARE(soc, CONFIG_SOC_LOG_LEVEL);

BUILD_ASSERT(DT_SAME_NODE(DT_CHOSEN(zephyr_cortex_m_idle_timer), DT_NODELABEL(rtc)),
		"STM32Fx series needs RTC as an additional IDLE timer for power management");

void pm_state_set(enum pm_state state, uint8_t substate_id)
{
	ARG_UNUSED(substate_id);

	switch (state) {
	case PM_STATE_SUSPEND_TO_IDLE:
		/* Prepare STOP mode with low-power regulator */
		LL_LPM_DisableEventOnPend();
		LL_PWR_ClearFlag_WU1();
		LL_PWR_ClearFlag_WU2();
		LL_PWR_ClearFlag_WU3();
		LL_PWR_ClearFlag_WU4();
		LL_PWR_ClearFlag_WU5();
		LL_PWR_ClearFlag_WU6();

		/* Use low-power regulator in STOP to reduce consumption */
		LL_PWR_SetPowerMode(LL_PWR_MODE_STOP_LPREGU);
		LL_LPM_EnableDeepSleep();

		k_cpu_idle();

		break;
	default:
		LOG_DBG("Unsupported power state %u", state);
		break;
	}
}

void pm_state_exit_post_ops(enum pm_state state, uint8_t substate_id)
{
	ARG_UNUSED(substate_id);

	switch (state) {
	case PM_STATE_SUSPEND_TO_IDLE:
		/* Back to normal sleep and restore clocks after STOP */
		LL_LPM_DisableSleepOnExit();
		LL_LPM_EnableSleep();

		/* Restore the clock setup after STOP mode */
		stm32_clock_control_init(NULL);
		break;

	default:
		LOG_DBG("Unsupported power substate-id %u", state);
		break;
	}

	/* System is now active, re-enable interrupts disabled on entry */
	irq_unlock(0);
}
